feat: 🎸 add service-worker

--- a/themes/fexo/layout/_partial/load-script.ejs
+++ b/themes/fexo/layout/_partial/load-script.ejs
@@ -25,5 +25,9 @@
     loadScript('/js/bundle.js?235683', function() {
       // load success
     });
+
+    loadScript('/js/sw-register.js?235683', function() {
+      // load success
+    })
   }
 </script>
